Made booking options hidden by default, and only visible when a user is logged in. Added booking functionality. Fixed minor ussies. JSON Error message persists, even though things are working.

--- a/FrontEnd/ASParagus/css/booking.css
+++ b/FrontEnd/ASParagus/css/booking.css
@@ -222,8 +222,8 @@ button:hover {
 }
 
 
-/*centers everything*/
-.time-availability-container {
+/*centers everything, allegedly. */
+#booking-options {
     display: flex;
     flex-direction: column;
     align-items: center;
